--- a/examples/chat/public/index.html
+++ b/examples/chat/public/index.html
@@ -40,6 +40,7 @@
             <input class="usernameInput input-lg" type="text" maxlength="20" placeholder="Your Username"/>
             <p style=" margin-top: -10px;"></p>
             <input class="groupInput input-lg" type="text" maxlength="4" placeholder="Room No."/>
+            <button id = 'loginButton'> Login </button>
          </div>
 
       </div>
